@@ -10,8 +10,10 @@ gcl (2.6.1-26) unstable; urgency=low
     init files, for Windows
   * small mod to unixport/makefile re filtering of firstfile and
     lastfile
+  * Backport zero divisor error cnditions from HEAD for
+    floor,ceiling,truncate
 
- -- Camm Maguire <camm@enhanced.com>  Fri, 20 Feb 2004 04:02:42 +0000
+ -- Camm Maguire <camm@enhanced.com>  Fri, 20 Feb 2004 04:27:58 +0000
 
 gcl (2.6.1-25) unstable; urgency=low
 
